plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'msa.service'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

ext {
    set('springCloudVersion', "2023.0.2")
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

dependencies {
    implementation project(':common')

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'net.javacrumbs.shedlock:shedlock-spring:5.13.0'
    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.13.0'


    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // QueryDSL JPA Jakarta
    implementation       'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    // Jakarta Persistence API
    compileOnly          'jakarta.persistence:jakarta.persistence-api:3.1.0'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1'

    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // Testcontainers
    testImplementation platform('org.testcontainers:testcontainers-bom:1.19.8') // BOM으로 버전 관리
    testImplementation 'org.testcontainers:junit-jupiter' // JUnit5 연동
    testImplementation 'org.testcontainers:mysql' // MySQL 컨테이너 사용
    testImplementation 'org.awaitility:awaitility:4.2.0'

}
def generated = 'build/generated/querydsl'

tasks.withType(JavaCompile).configureEach {
    options.getGeneratedSourceOutputDirectory().set(file(generated))
}

sourceSets {
    main.java.srcDirs += [ generated ]
}

tasks.named("clean") {
    doLast {
        delete(file(generated))
    }
}

springBoot {
    mainClass = 'msa.bookcatalog.BookCatalogApplication'
}

tasks.named('test') {
    useJUnitPlatform()
}